# hpc_funcs

./: .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-quality.yml  publish.yml  test.yml
src/hpc_funcs/: files.py
src/hpc_funcs/environment/: __init__.py
src/hpc_funcs/lmod/: __init__.py
src/hpc_funcs/schedulers/uge/: __init__.py  constants.py  qacct.py  qalter.py  qdel.py  qhost.py  qstat.py  qstat_json.py  qstat_text.py  qstat_xml.py  qsub.py  readme.md
src/hpc_funcs/schedulers/uge/environment/: __init__.py
src/hpc_funcs/schedulers/uge/monitoring/: __init__.py  follow.py
src/hpc_funcs/schedulers/uge/submission/: __init__.py
src/hpc_funcs/schedulers/uge/submission/templates/: submit-normal.jinja
src/hpc_funcs/shell/: __init__.py
tests/: conftest.py  test_lmod.py  test_shell.py  test_status.py
tests/resources/uge/: generate_uge_examples.py  qacct_array.txt  qstat_jobinfo_array.json  qstat_jobinfo_array.txt  qstat_jobinfo_array.xml  qstat_jobinfo_error.json  qstat_jobinfo_error.txt  qstat_jobinfo_error.xml  qstat_joblist.json  qstat_joblist.txt  qstat_joblist.xml
tests/uge/: test_monitoring.py  test_qacct.py  test_qstat.py  test_qstat_json.py  test_qstat_text.py  test_qstat_xml.py  test_submitting.py  test_submitting_progress.py
