[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc_funcs"
dynamic = ["version"]
authors = []
requires-python = ">=3.11"

[tool.setuptools.dynamic]
version = {attr = "hpc_funcs.version.__version__"}

[options.packages.find]
where="src"

[tool.setuptools.package-data]
"*" = ["*.jinja"]
